# ormax

./: LICENSE  MANIFEST.in  PKG-INFO  README.md  benchmark.md  benchmark_orms.py  example_full.py  example_usage.py  index.html  pyproject.toml  run_tests.py  setup.cfg  setup.py  test_ormax.py  test_runner.sh
.github/workflows/: index.html
docs/: 404.html  sitemap.xml
docs/advanced/debugging/: index.html
docs/getting-started/models/: index.html
docs/relationships/overview/: index.html
docs/search/: search_index.json
ormax/: __init__.py  core.py  exceptions.py  fields.py  query.py  utils.py
ormax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
site/: index.html  sitemap.xml
site/advanced/custom-models/: index.html
site/advanced/deployment/: index.html
site/advanced/performance-monitoring/: index.html
site/advanced/query-optimization/: index.html
site/advanced/testing/: index.html
site/advanced/transactions/: index.html
site/getting-started/installation/: index.html
site/querying/queryset/: index.html
