[metadata]
license_files = LICENSE

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
	.git,
	__pycache__,
	build,
	dist,
	*.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = strict

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

